Fix css of home page to align contents
Fix; fix css style of home page

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -1,7 +1,6 @@
 .ant-carousel {
-    /*margin-left:auto !important;*/
-    /*margin-right:auto !important;*/
-    margin: 0 8% 40px !important;
+    margin: 10px auto !important;
+
 
 }
 
