--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,4 +1,4 @@
 .goodsList{
     width: 100%;
-    align-content: center;
+    margin: 0 auto;
 }
